src/css/skywalker.css
/*!
Skywalker by David Malášek
https://github.com/davidmalasek/Skywalker
*/

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

* {
	font-family: "Inter", sans-serif;
}

/*---OPTIONS---*/
.h_s::-webkit-scrollbar,
.hide_scrollbar::-webkit-scrollbar {
	display: none;
}

/*---DISPLAY PROPERTIES---*/
.d_f,
.display_flex {
	display: flex;
}
.d_b,
.display_block {
	display: block;
}
.d_i-b,
.display_inline-block {
	display: inline-block;
}
.d_n,
.display_none {
	display: none;
}

/*---FLEX DIRECTIONS---*/
.f-d_r,
.flex-direction_row {
	flex-direction: row;
}
.f-d_c,
.flex-direction_column {
	flex-direction: column;
}
.f-w_w,
.flex-wrap_wrap {
	flex-wrap: wrap;
}
.f-w_n,
.flex-wrap_nowrap {
	flex-wrap: nowrap;
}

/*---ALIGN---*/
.j-c_c,
.justify-content_center {
	justify-content: center;
}
.j-c_s-b,
.justify-content_space-between {
	justify-content: space-between;
}
.j-c_s-a,
.justify-content_space-around {
	justify-content: space-around;
}
.a-i_c,
.align-items_center {
	align-items: center;
}
.a-i_f-s,
.align-items_flex-start {
	align-items: flex-start;
}
.a-i_f-e,
.align-items_flex-end {
	align-items: flex-end;
}

/*---LAYOUT---*/
.p_static,
.position_static {
	position: static;
}
.p_r,
.position_relative {
	position: relative;
}
.p_f,
.position_fixed {
	position: fixed;
}
.p_a,
.position_absolute {
	position: absolute;
}
.p_sticky,
.position_sticky {
	position: sticky;
}

/*---WIDTH---*/
.w_10vw,
.width_10vw {
	width: 10vw;
}
.w_20vw,
.width_20vw {
	width: 20vw;
}
.w_30vw,
.width_30vw {
	width: 30vw;
}
.w_40vw,
.width_40vw {
	width: 40vw;
}
.w_50vw,
.width_50vw {
	width: 50vw;
}
.w_60vw,
.width_60vw {
	width: 60vw;
}
.w_70vw,
.width_70vw {
	width: 70vw;
}
.w_80vw,
.width_80vw {
	width: 80vw;
}
.w_90vw,
.width_90vw {
	width: 90vw;
}
.w_100vw,
.width_100vw {
	width: 100vw;
}

/*---MIN-WIDTH---*/
.min-w_10vw,
.min-width_10vw {
	min-width: 10vw;
}
.min-w_20vw,
.min-width_20vw {
	min-width: 20vw;
}
.min-w_30vw,
.min-width_30vw {
	min-width: 30vw;
}
.min-w_40vw,
.min-width_40vw {
	min-width: 40vw;
}
.min-w_50vw,
.min-width_50vw {
	min-width: 50vw;
}
.min-w_60vw,
.min-width_60vw {
	min-width: 60vw;
}
.min-w_70vw,
.min-width_70vw {
	min-width: 70vw;
}
.min-w_80vw,
.min-width_80vw {
	min-width: 80vw;
}
.min-w_90vw,
.min-width_90vw {
	min-width: 90vw;
}
.min-w_100vw,
.min-width_100vw {
	min-width: 100vw;
}

/*---MAX-WIDTH---*/
.max-w_10vw,
.max-width_10vw {
	max-width: 10vw;
}
.max-w_20vw,
.max-width_20vw {
	max-width: 20vw;
}
.max-w_30vw,
.max-width_30vw {
	max-width: 30vw;
}
.max-w_40vw,
.max-width_40vw {
	max-width: 40vw;
}
.max-w_50vw,
.max-width_50vw {
	max-width: 50vw;
}
.max-w_60vw,
.max-width_60vw {
	max-width: 60vw;
}
.max-w_70vw,
.max-width_70vw {
	max-width: 70vw;
}
.max-w_80vw,
.max-width_80vw {
	max-width: 80vw;
}
.max-w_90vw,
.max-width_90vw {
	max-width: 90vw;
}
.max-w_100vw,
.max-width_100vw {
	max-width: 100vw;
}

/*---HEIGHT---*/
.h_10vh,
.height_10vh {
	height: 10vh;
}
.h_20vh,
.height_20vh {
	height: 20vh;
}
.h_30vh,
.height_30vh {
	height: 30vh;
}
.h_40vh,
.height_40vh {
	height: 40vh;
}
.h_50vh,
.height_50vh {
	height: 50vh;
}
.h_60vh,
.height_60vh {
	height: 60vh;
}
.h_70vh,
.height_70vh {
	height: 70vh;
}
.h_80vh,
.height_80vh {
	height: 80vh;
}
.h_90vh,
.height_90vh {
	height: 90vh;
}
.h_100vh,
.height_100vh {
	height: 100vh;
}

/*---MIN-HEIGHT---*/
.min-h_10vw,
.min-height_10vw {
	min-height: 10vw;
}
.min-h_20vw,
.min-height_20vw {
	min-height: 20vw;
}
.min-h_30vw,
.min-height_30vw {
	min-height: 30vw;
}
.min-h_40vw,
.min-height_40vw {
	min-height: 40vw;
}
.min-h_50vw,
.min-height_50vw {
	min-height: 50vw;
}
.min-h_60vw,
.min-height_60vw {
	min-height: 60vw;
}
.min-h_70vw,
.min-height_70vw {
	min-height: 70vw;
}
.min-h_80vw,
.min-height_80vw {
	min-height: 80vw;
}
.min-h_90vw,
.min-height_90vw {
	min-height: 90vw;
}
.min-h_100vw,
.min-height_100vw {
	min-height: 100vw;
}

/*---MAX-HEIGHT---*/
.max-h_10vw,
.max-height_10vw {
	max-height: 10vw;
}
.max-h_20vw,
.max-height_20vw {
	max-height: 20vw;
}
.max-h_30vw,
.max-height_30vw {
	max-height: 30vw;
}
.max-h_40vw,
.max-height_40vw {
	max-height: 40vw;
}
.max-h_50vw,
.max-height_50vw {
	max-height: 50vw;
}
.max-h_60vw,
.max-height_60vw {
	max-height: 60vw;
}
.max-h_70vw,
.max-height_70vw {
	max-height: 70vw;
}
.max-h_80vw,
.max-height_80vw {
	max-height: 80vw;
}
.max-h_90vw,
.max-height_90vw {
	max-height: 90vw;
}
.max-h_100vw,
.max-height_100vw {
	max-height: 100vw;
}

/*---TEXT---*/
.t-a_l,
.text-align_left {
	text-align: left;
}
.t-a_c,
.text-align_center {
	text-align: center;
}
.t-a_r,
.text-align_right {
	text-align: right;
}
.f-w_100,
.font-weight_100 {
	font-weight: 100;
}
.f-w_200,
.font-weight_200 {
	font-weight: 200;
}
.f-w_300,
.font-weight_300 {
	font-weight: 300;
}
.f-w_400,
.font-weight_400 {
	font-weight: 400;
}
.f-w_500,
.font-weight_500 {
	font-weight: 500;
}
.f-w_600,
.font-weight_600 {
	font-weight: 600;
}
.f-w_700,
.font-weight_700 {
	font-weight: 700;
}
.f-w_800,
.font-weight_800 {
	font-weight: 800;
}
.f-w_900,
.font-weight_900 {
	font-weight: 900;
}
.f-w_b,
.font-weight_bold {
	font-weight: bold;
}
.f-s_i,
.font-style_italic {
	font-style: italic;
}
.t-d_n,
.text-decoration_none {
	text-decoration: none;
}
.t-d_u,
.text-decoration_underline {
	text-decoration: underline;
}
.t-t_u,
.text-transform_uppercase {
	text-transform: uppercase;
}
.t-t_l,
.text-transform_lowercase {
	text-transform: lowercase;
}
.t-t_c,
.text-transform_capitalize {
	text-transform: capitalize;
}

/*---MOUSE---*/
.c_p,
.cursor_pointer {
	cursor: pointer;
}
.c_a,
.cursor_auto {
	cursor: auto;
}
.u-s_a,
.user-select_auto {
	user-select: auto;
}
.u-s_n,
.user-select_none {
	user-select: none;
}

/*---SKYWALKER CLASSES---*/
.sw_flex {
	display: flex;
	justify-content: center;
	align-items: center;
}
.sw_text-muted {
	opacity: 0.6;
}
/*---PSEUDO CLASSES---*/
.t-d_u--h,
.text-decoration_underline--hover:hover {
	text-decoration: underline;
}

